New endpoint: /chassisid
